force-app/main/default/objects/RTL_Contact_Address__c/RTL_Contact_Address__c.object-meta.xml
<CustomObject>
    <label>Contact Address</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Address</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>