force-app/main/default/objects/RTL_Contact_Address__c/fields/RTL_District__c.field-meta.xml
<CustomField>
    <fullName>RTL_District__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>District</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>