force-app/main/default/objects/RTL_Contact_Address__c/fields/RTL_Province__c.field-meta.xml
<CustomField>
    <fullName>RTL_Province__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Province</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>