force-app/main/default/objects/RTL_Contact_Address__c/fields/RTL_Sub_District__c.field-meta.xml
<CustomField>
    <fullName>RTL_Sub_District__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sub District</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>