force-app/main/default/objects/RTL_Contact_Address__c/fields/RTL_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>RTL_Zipcode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zipcode</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>