force-app/main/default/objects/RTL_Contact_Address__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RTL_Province__c</columns>
    <columns>RTL_District__c</columns>
    <columns>RTL_Sub_District__c</columns>
    <columns>RTL_Zipcode__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>